# cryptid_api

./: .gitignore  README.md  cryptids.db  populate_db.py  pyproject.toml  test_main.py
app/: database.py  main.py  models.py  schemas.py
app/routers/: cryptids.py
scripts/: populate_db.py
tests/: conftest.py  test_cryptids.py  test_main.py
